net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/RouteTableTests/RouteTableApiTest[2018-11-01]Async.json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-ad5c8899ac47b3aace31e4866ef8532b-590f7096ab70052e-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "053bdd8d7d2e01faf228a3efc88d7d81",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:18 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "91623362-7879-4971-8db3-b89cd213dd99",
        "x-ms-ratelimit-remaining-subscription-reads": "11724",
        "x-ms-request-id": "91623362-7879-4971-8db3-b89cd213dd99",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155219Z:91623362-7879-4971-8db3-b89cd213dd99"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg4389?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-c3f39e26c9bed685e4ddde36a9289a9d-1122d07264013e75-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "e552d15795474c2637499388ed6a12bc",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:19 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "86389b14-0add-4f45-8a52-5b4170678530",
        "x-ms-ratelimit-remaining-subscription-writes": "1131",
        "x-ms-request-id": "86389b14-0add-4f45-8a52-5b4170678530",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155219Z:86389b14-0add-4f45-8a52-5b4170678530"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389",
        "name": "csmrg4389",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "183",
        "Content-Type": "application/json",
        "traceparent": "00-e43e50c909d98c52066f6910ab29908f-67455cd735203db9-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "5d672b2c56ed6f97df7fa601e712746a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "routes": [
            {
              "properties": {
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/43630f50-2897-4432-aece-ee54cf80701a?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1038",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:22 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "96a04faa-084d-4bc0-bef7-dfc4445ea471",
        "x-ms-client-request-id": "5d672b2c56ed6f97df7fa601e712746a",
        "x-ms-correlation-request-id": "0eeca91e-bc4f-4f5f-b223-e333619814e3",
        "x-ms-ratelimit-remaining-subscription-writes": "1130",
        "x-ms-request-id": "43630f50-2897-4432-aece-ee54cf80701a",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155222Z:0eeca91e-bc4f-4f5f-b223-e333619814e3"
      },
      "ResponseBody": {
        "name": "azsmnet7828",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828",
        "etag": "W/\"e0a36017-5159-4e82-95e0-caa17780c827\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "ff514123-e068-4dfd-a593-b3cf1a2368cd",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet8044",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet8044",
              "etag": "W/\"e0a36017-5159-4e82-95e0-caa17780c827\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/43630f50-2897-4432-aece-ee54cf80701a?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-e43e50c909d98c52066f6910ab29908f-a94014e0298a1c35-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "2655a81574f08e65af2646cc9148ac75",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:22 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e24e224e-c47b-4622-87ad-d892cad2b37f",
        "x-ms-client-request-id": "2655a81574f08e65af2646cc9148ac75",
        "x-ms-correlation-request-id": "6ea17ea8-62be-4a9c-842e-eb31731c34c7",
        "x-ms-ratelimit-remaining-subscription-reads": "11723",
        "x-ms-request-id": "947be664-348a-42b8-a3c3-0ab1138a030e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155222Z:6ea17ea8-62be-4a9c-842e-eb31731c34c7"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-e43e50c909d98c52066f6910ab29908f-03b5d978305c4d4e-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "1413ff793213168d71702885dd92b04f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1040",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:22 GMT",
        "ETag": "W/\"be191a11-5bab-44ff-a68d-967dce1b4ce1\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "eeee7f93-7245-4ea7-a457-79b6bf7efa8e",
        "x-ms-client-request-id": "1413ff793213168d71702885dd92b04f",
        "x-ms-correlation-request-id": "b7667330-62a7-4044-895d-d9224a97bdf7",
        "x-ms-ratelimit-remaining-subscription-reads": "11722",
        "x-ms-request-id": "91d627c8-4a5c-4c5f-8d4e-bf1d15c54fdd",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155223Z:b7667330-62a7-4044-895d-d9224a97bdf7"
      },
      "ResponseBody": {
        "name": "azsmnet7828",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828",
        "etag": "W/\"be191a11-5bab-44ff-a68d-967dce1b4ce1\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "ff514123-e068-4dfd-a593-b3cf1a2368cd",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet8044",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet8044",
              "etag": "W/\"be191a11-5bab-44ff-a68d-967dce1b4ce1\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-bbd3ee890d34cdc13d4c3507735d160f-355ecf4a1b04ec44-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3febde4c4dbd8a7a425e9521cfed65eb",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1040",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:23 GMT",
        "ETag": "W/\"be191a11-5bab-44ff-a68d-967dce1b4ce1\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2c249c56-5448-477d-a245-05c39c00e52f",
        "x-ms-client-request-id": "3febde4c4dbd8a7a425e9521cfed65eb",
        "x-ms-correlation-request-id": "490d8257-d76d-4de7-b7cf-46b7a493632c",
        "x-ms-ratelimit-remaining-subscription-reads": "11721",
        "x-ms-request-id": "12369d92-252a-45eb-abb6-b7b52233ed15",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155223Z:490d8257-d76d-4de7-b7cf-46b7a493632c"
      },
      "ResponseBody": {
        "name": "azsmnet7828",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828",
        "etag": "W/\"be191a11-5bab-44ff-a68d-967dce1b4ce1\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "ff514123-e068-4dfd-a593-b3cf1a2368cd",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet8044",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet8044",
              "etag": "W/\"be191a11-5bab-44ff-a68d-967dce1b4ce1\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "649",
        "Content-Type": "application/json",
        "traceparent": "00-e3af2e2f4dfbeca0801795a8ae282ef1-b9db78a20d4a64fa-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "be8b03bb1e7de3b51a3fb57f4bdfb01c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828",
        "properties": {
          "routes": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet8044",
              "type": "Microsoft.Network/routeTables/routes",
              "properties": {
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              }
            },
            {
              "properties": {
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              }
            }
          ],
          "disableBgpRoutePropagation": false
        },
        "location": "westus"
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/b6c1d11b-65da-4891-b47c-407fdd543d07?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1536",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:23 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "bcdeb652-fc59-435d-9808-ba9b4af2dff0",
        "x-ms-client-request-id": "be8b03bb1e7de3b51a3fb57f4bdfb01c",
        "x-ms-correlation-request-id": "b23c0236-5a08-4185-b477-27e44958801d",
        "x-ms-ratelimit-remaining-subscription-writes": "1129",
        "x-ms-request-id": "b6c1d11b-65da-4891-b47c-407fdd543d07",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155224Z:b23c0236-5a08-4185-b477-27e44958801d"
      },
      "ResponseBody": {
        "name": "azsmnet7828",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828",
        "etag": "W/\"5b1e7f88-da6d-4a20-88e7-f336e71e367d\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "ff514123-e068-4dfd-a593-b3cf1a2368cd",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet8044",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet8044",
              "etag": "W/\"5b1e7f88-da6d-4a20-88e7-f336e71e367d\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "azsmnet1288",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet1288",
              "etag": "W/\"5b1e7f88-da6d-4a20-88e7-f336e71e367d\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/b6c1d11b-65da-4891-b47c-407fdd543d07?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-e3af2e2f4dfbeca0801795a8ae282ef1-34c8138f56f09d64-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d9ca3d0af1072ed12908247e97fa3e63",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:24 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "0679859f-6f77-4db3-b408-71be9109aaf4",
        "x-ms-client-request-id": "d9ca3d0af1072ed12908247e97fa3e63",
        "x-ms-correlation-request-id": "13ed7945-c29d-4cc7-9037-fb43e72d07a1",
        "x-ms-ratelimit-remaining-subscription-reads": "11720",
        "x-ms-request-id": "a87758d6-c84d-4408-84e3-77c43cfe9155",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155224Z:13ed7945-c29d-4cc7-9037-fb43e72d07a1"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-e3af2e2f4dfbeca0801795a8ae282ef1-6cd86f58f22619a1-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d8ac78adb26d4e8f4b5f39f44c0046ae",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1539",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:24 GMT",
        "ETag": "W/\"108668c5-6a6f-422c-bfbf-f40e3286c34e\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "0a882f55-7f3b-4d70-843f-b67cd7963c9b",
        "x-ms-client-request-id": "d8ac78adb26d4e8f4b5f39f44c0046ae",
        "x-ms-correlation-request-id": "01cf755a-ee1d-4cec-94a0-5b848263c204",
        "x-ms-ratelimit-remaining-subscription-reads": "11719",
        "x-ms-request-id": "124514e4-01ce-4632-ad1e-4cfaeb25f90c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155224Z:01cf755a-ee1d-4cec-94a0-5b848263c204"
      },
      "ResponseBody": {
        "name": "azsmnet7828",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828",
        "etag": "W/\"108668c5-6a6f-422c-bfbf-f40e3286c34e\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "ff514123-e068-4dfd-a593-b3cf1a2368cd",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet8044",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet8044",
              "etag": "W/\"108668c5-6a6f-422c-bfbf-f40e3286c34e\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "azsmnet1288",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet1288",
              "etag": "W/\"108668c5-6a6f-422c-bfbf-f40e3286c34e\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-3dac16e76b17db282264d32b6ea6d1c2-9a41bc1b66ccab94-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0e7530f7d715831525518953483a948a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1539",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:24 GMT",
        "ETag": "W/\"108668c5-6a6f-422c-bfbf-f40e3286c34e\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3c4b52fe-372e-4a29-8e9f-defccf943705",
        "x-ms-client-request-id": "0e7530f7d715831525518953483a948a",
        "x-ms-correlation-request-id": "4b62dbcb-c533-45f7-a4c6-704d1a20f5c7",
        "x-ms-ratelimit-remaining-subscription-reads": "11718",
        "x-ms-request-id": "166ede51-ead9-4898-8c56-785fdf084abd",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155225Z:4b62dbcb-c533-45f7-a4c6-704d1a20f5c7"
      },
      "ResponseBody": {
        "name": "azsmnet7828",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828",
        "etag": "W/\"108668c5-6a6f-422c-bfbf-f40e3286c34e\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "ff514123-e068-4dfd-a593-b3cf1a2368cd",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet8044",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet8044",
              "etag": "W/\"108668c5-6a6f-422c-bfbf-f40e3286c34e\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "azsmnet1288",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet1288",
              "etag": "W/\"108668c5-6a6f-422c-bfbf-f40e3286c34e\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "513",
        "Content-Type": "application/json",
        "traceparent": "00-ad605557f5b6f4f3c2ff4af6ff691516-4513aea7d849f756-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "23076e4a6fbf5717ad7b8ea7b8dce128",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828",
        "properties": {
          "routes": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet1288",
              "type": "Microsoft.Network/routeTables/routes",
              "properties": {
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              }
            }
          ],
          "disableBgpRoutePropagation": false
        },
        "location": "westus"
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/60013acb-b142-40ea-bae3-053c4a9c0aa6?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "983",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:25 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ce489594-72b1-4b0f-8557-b08e1cc8a16e",
        "x-ms-client-request-id": "23076e4a6fbf5717ad7b8ea7b8dce128",
        "x-ms-correlation-request-id": "9107df1e-aad6-47f2-acbf-3840f493f872",
        "x-ms-ratelimit-remaining-subscription-writes": "1128",
        "x-ms-request-id": "60013acb-b142-40ea-bae3-053c4a9c0aa6",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155225Z:9107df1e-aad6-47f2-acbf-3840f493f872"
      },
      "ResponseBody": {
        "name": "azsmnet7828",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828",
        "etag": "W/\"5efc969b-412c-4f04-a623-7132324a8cf7\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "ff514123-e068-4dfd-a593-b3cf1a2368cd",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet1288",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet1288",
              "etag": "W/\"5efc969b-412c-4f04-a623-7132324a8cf7\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/60013acb-b142-40ea-bae3-053c4a9c0aa6?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-ad605557f5b6f4f3c2ff4af6ff691516-ea79a6eb3e29671c-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "deaaaecb23f888ef191d6199496dcb48",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:25 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "4daba761-1cc4-4f7c-828f-ef7662dfd544",
        "x-ms-client-request-id": "deaaaecb23f888ef191d6199496dcb48",
        "x-ms-correlation-request-id": "4a2e529f-09f8-4f92-9fa0-52cda3692bc3",
        "x-ms-ratelimit-remaining-subscription-reads": "11717",
        "x-ms-request-id": "c859f03a-ab90-4945-83ae-83e5d6b02359",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155226Z:4a2e529f-09f8-4f92-9fa0-52cda3692bc3"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-ad605557f5b6f4f3c2ff4af6ff691516-5c05938e407f3447-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d39160702cb319052031c097bcfc2e71",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "985",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:26 GMT",
        "ETag": "W/\"239d88a3-7ab9-4c1c-a7a8-3bcf82230bfb\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "9ef548e8-a4ad-433e-b4f3-6dbdd8f09d6d",
        "x-ms-client-request-id": "d39160702cb319052031c097bcfc2e71",
        "x-ms-correlation-request-id": "ed26fb50-f50b-4f14-89d3-80f6f2f90f61",
        "x-ms-ratelimit-remaining-subscription-reads": "11716",
        "x-ms-request-id": "1ab1add0-a2c6-4a3a-aaf9-d9b7a37a23fe",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155226Z:ed26fb50-f50b-4f14-89d3-80f6f2f90f61"
      },
      "ResponseBody": {
        "name": "azsmnet7828",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828",
        "etag": "W/\"239d88a3-7ab9-4c1c-a7a8-3bcf82230bfb\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "ff514123-e068-4dfd-a593-b3cf1a2368cd",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet1288",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet1288",
              "etag": "W/\"239d88a3-7ab9-4c1c-a7a8-3bcf82230bfb\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-c85d98143bb4ba30179b563a37fee530-30602055e3cfcf51-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "09dc7c7502329e3086fd4d68ceb48df5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "985",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:26 GMT",
        "ETag": "W/\"239d88a3-7ab9-4c1c-a7a8-3bcf82230bfb\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d38c9255-51c6-470f-ab15-ab84d779ec1a",
        "x-ms-client-request-id": "09dc7c7502329e3086fd4d68ceb48df5",
        "x-ms-correlation-request-id": "56ee1491-808e-4b76-a17f-81a37e0072f2",
        "x-ms-ratelimit-remaining-subscription-reads": "11715",
        "x-ms-request-id": "29edc60d-86ee-4a5f-8b43-127dfdeb0a65",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155226Z:56ee1491-808e-4b76-a17f-81a37e0072f2"
      },
      "ResponseBody": {
        "name": "azsmnet7828",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828",
        "etag": "W/\"239d88a3-7ab9-4c1c-a7a8-3bcf82230bfb\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "ff514123-e068-4dfd-a593-b3cf1a2368cd",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet1288",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828/routes/azsmnet1288",
              "etag": "W/\"239d88a3-7ab9-4c1c-a7a8-3bcf82230bfb\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables/azsmnet7828?api-version=2018-11-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-ab3255d0ac5171ee8083e177b9b98372-38340398c0fa791b-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "c8aa695c32aa9e5da890bec76257cc1d",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/8d2e7d56-82d1-436a-8002-012b443607a9?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:52:27 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/8d2e7d56-82d1-436a-8002-012b443607a9?api-version=2018-11-01",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "c2d811e2-8c3d-46db-a04d-c5bc33817e5f",
        "x-ms-client-request-id": "c8aa695c32aa9e5da890bec76257cc1d",
        "x-ms-correlation-request-id": "3d48828c-862d-434f-b057-030948164f6c",
        "x-ms-ratelimit-remaining-subscription-deletes": "14970",
        "x-ms-request-id": "8d2e7d56-82d1-436a-8002-012b443607a9",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155227Z:3d48828c-862d-434f-b057-030948164f6c"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/8d2e7d56-82d1-436a-8002-012b443607a9?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-ab3255d0ac5171ee8083e177b9b98372-e53f752c1bd74774-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "533acba3665142c61e3d60a144683c2e",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:27 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "4d5dadbf-a3bf-47e8-85e5-02569c850ae0",
        "x-ms-client-request-id": "533acba3665142c61e3d60a144683c2e",
        "x-ms-correlation-request-id": "e4a6d748-ac11-43bc-9a99-7f6f651f56c7",
        "x-ms-ratelimit-remaining-subscription-reads": "11714",
        "x-ms-request-id": "3001af1b-2784-4df2-9e54-15bbdad2a9bf",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155227Z:e4a6d748-ac11-43bc-9a99-7f6f651f56c7"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg4389/providers/Microsoft.Network/routeTables?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "de793031c0909b63523c97b7e6a7bf0b",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "19",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:28 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "9d32b625-f72a-4e9a-a8c6-5fd595e9be35",
        "x-ms-client-request-id": "de793031c0909b63523c97b7e6a7bf0b",
        "x-ms-correlation-request-id": "2fdc0e66-fa30-4c8d-8722-92cfdbf89c2f",
        "x-ms-ratelimit-remaining-subscription-reads": "11713",
        "x-ms-request-id": "64a6240d-19fd-4a07-866a-5fa6df7c5e5e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155228Z:2fdc0e66-fa30-4c8d-8722-92cfdbf89c2f"
      },
      "ResponseBody": {
        "value": []
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "891287797",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
